export interface BudgetSummary {
  totalIncome: number;
  totalExpense: number;
  balance: number;
  expenseRatio: number;
}
